--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
             - DB_PORT=27017
             - DB_USERNAME=senneliquor
             - DB_PASSWORD=senneliquor
+            - DB_NAME=senneliquor
         volumes:
             - ./:/var/www/app
         ports:
