--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,6 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
   },
-  "include": ["src", "src/routes/routes.ts", "src/routes"],
+  "include": ["src", "__tests__"],
   "exclude": ["node_modules"]
 }
