--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ services:
     node:
         image: will871/node:1.0
         build: 
+            context: .
             dockerfile: Dockerfile
         container_name: desafio-senneliquor-node
         environment:
@@ -16,6 +17,7 @@ services:
             - ./:/var/www/app
         ports:
             - 8080:8080
+            - 9229:9229
         tty: true
 
     mongo:
