--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "src/index.tsx",
   "scripts": {
     "start": "ts-node src/index.ts",
+    "test:debug": "node --inspect-brk=0.0.0.0:9229 -r ts-node/register ./node_modules/.bin/jest --runInBand --detectOpenHandles",
     "test": "jest"
   },
   "author": "William Barreto da Silva",
@@ -15,12 +16,14 @@
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.0.3",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.13",
     "@types/mongoose": "^5.11.96",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.7.3",
     "@types/supertest": "^6.0.2",
+    "faker": "^6.6.6",
     "jest": "^29.7.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
