--- a/package.json
+++ b/package.json
@@ -11,19 +11,21 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.21.0",
     "mongoose": "^8.6.3",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.0.3",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.13",
     "@types/mongoose": "^5.11.96",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.7.3",
     "@types/supertest": "^6.0.2",
-    "faker": "^6.6.6",
+    "faker": "^5.5.3",
     "jest": "^29.7.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
