--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,8 @@
     "sourceMap": true
   },
   "include": [
-    "src",
-    "__tests__"
+    "src/**/*",
+    "__tests__/**/*"
   ],
   "exclude": [
     "node_modules"
