--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
             dockerfile: Dockerfile
         container_name: desafio-senneliquor-node
         environment:
+            - APP_SECRET=development
             - NODE_ENV=development
             - SERVER_PORT=8080
             - DB_HOST=mongo
