--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.0.3",
@@ -27,6 +28,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.7.3",
     "@types/supertest": "^6.0.2",
+    "@types/validator": "^13.12.2",
     "faker": "^5.5.3",
     "jest": "^29.7.0",
     "supertest": "^7.0.0",
