--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "jest"
   },
   "author": "William Barreto da Silva",
-  "license": "ISC",
+  "license": "Proprietary",
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
