--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,13 +9,16 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "sourceMap": true,
-    "typeRoots": ["./node_modules/@types", "./src/Types"],
+    "typeRoots": [
+      "./node_modules/@types",
+      "src/@types"
+    ]
   },
   "include": [
-    "src/**/*",
-    "__tests__/**/*"
+    "src/**/*"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "__tests__/**/*"
   ]
 }
